    connection in the connection queue after its timeout has
    reached zero. This allows traffic that does not hold the
    link up to be seen in the monitor's connection queue display.
  - Added ICMP, ICMP6 and IGMP protocol and link rules.
  - Use ip to set and remove addresses if we have it and specify the
    netmask.

  CHANGES FROM DIALD 1.0 BRANCH
  - TUN fixes from Jonathan Briggs <zlynx@acm.org>
  - When opening a TUN device look in both the traditional path
    and the devfs path.
  - Use getprotoent() and getservent() to read protocol and service
    name <-> number mappings rather than home grown parsing. This
    finally notes the aliases as well.
  - Fixed installation of PAM module.
  - Get the correct clocks per second value for the return from
    times() using sysconf(), CLK_TCK or HZ.


Major changes between version 1.0 and 2.0
------------------------------------------------
  - Common config stuff moved from /usr/lib/diald to /usr/share/diald
    so 2.0 can coexist with 1.0.
  - Major rewrite of much of the packet handling engine and related
    config options. Diald can now be configured to handle arbitrary
    protocols other than IPv4. If you have IPv6 in your kernel then
    every time a link comes up you should see an IPv6 router discovery
    in dctrl's connection window :-).


Major changes between version 0.99.5 and 1.0
------------------------------------------------
  - Use openpty to get a pseudo terminal if it is available.
  - Added Makefile rule to build RPMs.
  - Changed to use GNU autoconf.
  - Added config save/restore to dctrl. Patch from someone but
    I forget who. If it was you please tell me!
  - Handle dynamic changes of netmask.
  - Fix check for first packet between firewall.c and filter.c
  - Only compile TCP_CORK code if TCP_CORK is defined.


Major changes between version 0.99.4 and 0.99.5.
------------------------------------------------
  - Use TCP_CORK on monitor output (if available) to make sure we