@@ -11,6 +11,7 @@ Major changes between version 2.0 and 2.0.1
     netmask.
 
   CHANGES FROM DIALD 1.0 BRANCH
+  - Compile TUN support if configure can find linux/if_tun.h
   - TUN fixes from Jonathan Briggs <zlynx@acm.org>
   - When opening a TUN device look in both the traditional path
     and the devfs path.
